refactor/exception-handling: global exception handler 도입 및 예외 처리 수정